Fixed header sizes on mobile

--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -11,7 +11,6 @@
 }
 
 .portfolio h3 {
-    font-size: 2em;
     margin-bottom: 0;
 }
 
