--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,10 @@ h2 {
     font-size: 3.5em;
 }
 
+h3 {
+    font-size: 2em;
+}
+
 @media screen and (max-width: 1050px) {
     h1,
     h2 {
@@ -91,5 +95,31 @@ h2 {
     h1,
     h2 {
         font-size: 2em;
+    }
+
+    h3 {
+        font-size: 1.75em;
+    }
+}
+
+@media screen and (max-width: 465px) {
+    h1,
+    h2 {
+        font-size: 1.75em;
+    }
+
+    h3 {
+        font-size: 1.5em;
+    }
+}
+
+@media screen and (max-width: 410px) {
+    h1,
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.25em;
     }
 }
